NEW : Changed port

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 external.service.url = google.com
 management.endpoints.web.exposure.include=*
 #management.endpoints.web.exposure.include=health,metrics
+server.port=8181
